--- a/.gitignore
+++ b/.gitignore
@@ -1,73 +1,47 @@
-# ===============================
 # Python
-# ===============================
 __pycache__/
 *.py[cod]
 *$py.class
 
-# ===============================
 # Virtual Environment
-# ===============================
 venv/
 env/
 .venv/
 
-# ===============================
 # Django
-# ===============================
 *.log
 local_settings.py
 db.sqlite3
 db.sqlite3-journal
 
-# Migrations (optional)
-# migrations/
-# !migrations/__init__.py
-
-# ===============================
-# Django Media & Static
-# ===============================
+# statics
 media/
 staticfiles/
 
-# ===============================
+
 # Environment variables
-# ===============================
 .env
 .env.*
 !.env.example
 
-# ===============================
+
 # IDE / Editor
-# ===============================
 .vscode/
 .idea/
 *.swp
 *.swo
 
-# ===============================
 # OS files
-# ===============================
 .DS_Store
 Thumbs.db
 
-# ===============================
 # Test / Coverage
-# ===============================
 .coverage
 htmlcov/
 .pytest_cache/
 
-# ===============================
-# Celery / Redis
-# ===============================
-celerybeat-schedule
-celerybeat.pid
-
-# ===============================
 # Logs
-# ===============================
 logs/
 
-#
+# extra
 project.md
