--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,6 @@ djangorestframework==3.16.1
 djangorestframework-simplejwt==5.5.1
 psycopg2-binary==2.9.11
 python-dotenv==1.2.1
+pytest==9.0.2
+pytest-django==4.11.1
+model-bakery==1.20.5
